--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
         <p>Own your future learning new skills online</p>
         <div class="latter">
             <input type="email" placeholder="Write Your Email" required />
-            <input type="submit" value="Let's Start" required />
+            <div class="div-latter">
+              Let's Start
+            </div>
         </div>
       </div>
       <div class="home-img">
