--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
         <p>Own your future learning new skills online</p>
         <div class="latter">
             <input type="email" placeholder="Write Your Email" required />
-            <div class="div-latter">
-              Let's Start
-            </div>
+            <button type="submit" class="div-latter"> Let's Start </button>
         </div>
       </div>
       <div class="home-img">
