--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="normalize/normalize.css">
+    <link rel="stylesheet" href="normalize/reset.css">
     <title>WebSite</title>
   </head>
   <body>
@@ -41,7 +43,8 @@
         <p>Own your future learning new skills online</p>
         <div class="latter">
             <input type="email" placeholder="Write Your Email" required />
-            <button type="submit" class="div-latter"> Let's Start </button>
+            <input type="submit" placeholder="Let's Start">
+            <!-- <button type="submit" class="div-latter"> Let's Start </button> -->
         </div>
       </div>
       <div class="home-img">
