--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"
-    />
+      rel="stylesheet"href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css"/>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="normalize/normalize.css">
     <link rel="stylesheet" href="normalize/reset.css">
@@ -336,7 +334,7 @@
     </div>
   </footer>
   <div class="last-text">
-		<p>© 2022 Mahdi Rezaei All rights reserved.</p>
+		<p> 2022 Mahdi Rezaei All rights reserved.</p>
 	</div>
     <script src="script.js"></script>
   </body>
